--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,11 +59,8 @@
     <header class="top-bar">
       <div class="middle-aligner">
         <div class="subgroup">
-          <a class="logo" href="/"><img src="/assets/images/logo.svg"/></a>
+          <a class="logo" href="/"><img src="/assets/images/bitrise-docs-logo-white.svg"/></a>
           <button class="burger material-icon" onclick="toggleSideBar()"></button>
-          <div class="title">
-            <a class="title" href="/">{{ site.data.basic_info.name }}</a>
-          </div>
         </div>
         <div class="search-bar">
           <div class="input-wrapper">
