side menu fixed position

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,19 +69,26 @@
             <button class="search-clear material-icon" onclick="clearSearchField()"></button>
           </div>
         </div>
-        <div class="lang-selector">
-          <a href="{{ page.url_without_lang }}" {% if page.lang == 'en' %}class="active"{% endif %}>English</a>
-          <a href="/jp{{ page.url_without_lang }}" {% if page.lang == 'jp' %}class="active"{% endif %}>日本語</a>
+        <div class="dropdown">
+          <button class="dropbtn">
+            {% if page.lang == 'jp' %}
+              <a href="{{ page.url_without_lang }}" class="active">English</a>
+            {% elsif page.lang == 'en' %}
+              <a href="/jp{{ page.url_without_lang }}" class="active">日本語</a>
+            {% endif %}
+          </button>
         </div>
         <a class="source-code" href="{{ site.data.basic_info.source_code_url }}" target="_blank">
-          <object type="image/svg+xml" data="/assets/images/logo-github.svg" class="source-host-logo"></object>
+          <object type="image/svg+xml" data="/assets/logos/icons/github.svg" class="source-host-logo"></object>
           <span class="source-host-name">GitHub</span>
         </a>
       </div>
     </header>
     <div class="column-parent middle-aligner">
       <nav id="side-menu">
-        {% assign menu = site.menus.main %} {% include menu.html %}
+        <div class="menu-wrapper">
+          {% assign menu = site.menus.main %} {% include menu.html %}
+        </div>
       </nav>
       <main class="content">
         {% if current_article %}
