--- a/assets/main.scss
+++ b/assets/main.scss
@@ -186,14 +186,13 @@ header.top-bar {
 			}
     }
 
-    .dropdown {
+    .lang-selector {
       display: flex;
       align-items: center;
       flex-shrink: 0;
 
       a {
         margin-left: 1rem;
-				font-family: TTNorms;
         color: white;
         text-decoration: none;
         font-size: 1.4rem;
@@ -201,13 +200,8 @@ header.top-bar {
         &.active {
           font-weight: bold;
         }
-			}
-
-			.dropbtn {
-				background-color: $color-deep_purple;
-				border: none;
-		}
-  }
+      }
+    }
 
 		.source-code {
 			display: flex;
@@ -986,7 +980,7 @@ footer {
 				position: relative;
 				width: 70vw;
 				padding-top: 0;
-				
+
 			}
 
 			ol.menu-list {
